# ecr-cleaner

./: .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  index.yaml  mypy.ini  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  onCreateCommand.bash  postStartCommand.bash
.github/workflows/: publish-docker-image.yml  publish-helmchart.yml  publish-pypi.yml  python-tests.yml  test-docker-images.yml  test-helm.yml
charts/ecr-cleaner/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/ecr-cleaner/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  serviceaccount.yaml
charts/ecr-cleaner/templates/tests/: test-connection.yaml  test.yaml
scripts/: build-docker-image.bash  create-venv.bash
src/ecr_cleaner/: __init__.py  ecr_cleaner.py
src/ecr_cleaner_cli/: cli.py
src/ecr_lifecycle/: __init__.py  ecr_lifecycle.py  helpers.py
src/ecr_lifecycle_cli/: __init__.py  cli.py
src/scripts/: verify_install.py
tests/: images.json  test_ecr_cleaner.py  test_ecr_lifecycle.py
